# app/Http/Controllers/Swagger/MainController.php
@@ -6,12 +6,22 @@ use App\Http\Controllers\Controller;
 use Illuminate\Http\Request;
 
 /**
- * @OA\Info(
- * 	title="My Doc API",
- * 	version="1.0.0"
- * ),
- * @OA\PathItem(
- * 	path="/api/"
+ * @OA\OpenApi(
+ *    @OA\Info(
+ *       title="API Documentation",
+ *       version="1.0.0"
+ *    ),
+ *    @OA\Components(
+ *       @OA\SecurityScheme(
+ *           securityScheme="bearerAuth",
+ *           type="http",
+ *           scheme="bearer",
+ *           bearerFormat="JWT"
+ *       )
+ *    ),
+ *    @OA\PathItem(
+ *       path="/api/"
+ *    )
  * )
  */
 class MainController extends Controller
